# NFC-RFID-RPi

./: README.md
NFC-Reader/: CMakeLists.txt  NXP-Readme.txt
NFC-Reader/Example1_incl_WiringPi/: CMakeLists.txt  Example1_incl_WiringPi.c  Readme.txt
NFC-Reader/Example1_incl_WiringPi/intfs/: Example1_incl_WiringPi.h
NFC-Reader/_build/: Readme.md
misc_media/: responses-nfc-rfid.txt
